# gat

./: .env.example  .gitignore  README.md  airflow-easy-install.sh  airflow.cfg  analysis.md  bayesian_search.py  bayesian_search_analysis.md  benchmark.py  evolutionary_computing_search.py  evolutionary_computing_search_analysis.md  grid_search.py  monte_carlo_search.py  monte_carlo_search_analysis.md  parser.py  pyproject.toml  random_search.py  random_search_analysis.md  remote_exec.sh  requirements.txt  restart_serverapp.sh  restart_superlink.sh  restart_supernode.sh  run.py  run_grid.py  start_fl_simulation.sh  visualize.py  vnf_ds_benchmark.py
dags/: dataset_dag.py
fedl/: README.md  pyproject.toml
fedl/fedl/: __init__.py  client_app.py  custom_strategy.py  server_app.py
fl/: client.py  server.py  simulation.py
gat/: analysis.py  constants.py  converter.py  data_models.py  encoder.py  gcn.py  load_data.py  model.py  preprocesser.py  rnn.py  rnn_preprocessor.py  vnf_ds_preprocesser.py
