[tool.poetry]
name = "gat"
version = "0.1.0"
description = ""
authors = ["Matthias Osswald <matthias@busykoala.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
torch = "^2.3.0"
torch-geometric = "^2.5.3"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
